# mni-7t-dicom-to-bids

./: COMPILATION.md  CONTRIBUTING.md  Dockerfile  README.md  compile.Dockerfile  pyproject.toml  run.Dockerfile
.github/actions/install-project/: action.yml
.github/workflows/: checks.yml  release.yml
src/mni_7t_dicom_to_bids/: args.py  convert_dicom_series.py  dataclass.py  dataset_files.py  dictionary.py  group_dicom_series.py  map_dicom_series.py  patch_files.py  pipeline.py  print.py
src/mni_7t_dicom_to_bids/scripts/: run_mni7t_dcm2bids.py
src/mpn_dicom_to_bids/: variables.py
