[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mni_7t_dicom_to_bids"
version = "0.1.0"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
dependencies = [
    "bic_util @ git+https://github.com/bic-mni/bic-mri-pipeline-util@release-0.1.0",
    "pydicom",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "pyright",
    "ruff",
    "typos",
]

[project.scripts]
mni7t_dcm2bids = "mni_7t_dicom_to_bids.scripts.run_mni7t_dcm2bids:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mni_7t_dicom_to_bids"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src"]
strict = ["src"]

[tool.ruff]
include = ["src/**/*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["E203", "E221", "E241", "E251"]
select = ["E", "F", "I", "N", "PTH", "RUF", "UP", "W"]

[tool.typos.files]
# Ignore data dictionary.
extend-exclude = [
    "src/mni_7t_dicom_to_bids/dictionary.py",
]

[tool.typos.default]
locale = "en-us"

[tool.typos.default.extend-words]
datas = "datas"  # PyInstaller attribute
